idea core.js, 修复在登陆和注册时逻辑错误